orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Lead__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Text</type>
    <length>128</length>
</CustomField>