orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Website</fullName><default>false</default><label>Website</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Cold Call</fullName><default>false</default><label>Cold Call</label></value>
            <value><fullName>Social Media</fullName><default>false</default><label>Social Media</label></value>
            <value><fullName>Trade Show</fullName><default>false</default><label>Trade Show</label></value>
            <value><fullName>Email Campaign</fullName><default>false</default><label>Email Campaign</label></value>
            <value><fullName>Partner</fullName><default>false</default><label>Partner</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>