orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Contacted</fullName><default>false</default><label>Contacted</label></value>
            <value><fullName>Qualified</fullName><default>false</default><label>Qualified</label></value>
            <value><fullName>Unqualified</fullName><default>false</default><label>Unqualified</label></value>
            <value><fullName>Converted</fullName><default>false</default><label>Converted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>