orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Lead__c/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>